[package]
name = "learn-app-runner"
version = "0.1.0"
authors = ["ROki1988 <roki.swindler@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "1"
structopt = "0.3.21"
tokio = { version = "1.2.0", features = ["full"] }
tower = { version = "0.4.5", features = ["full"] }
tower-http = { version = "0.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = {version = "0.2", features = ["fmt", "chrono"]}
axum = { version = "0.1.2" }
http = "0.2.4"
hyper = { version = "0.14", features = ["server", "tcp", "http1", "stream"] }
anyhow = "1"


[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-fmt", "run-cargo-test", "run-cargo-clippy"]